    Updated Serbian     by Мирослав Николић <miroslavnikolic@rocketmail.com>
    Updated Czech       by Marek Černocký <marek@manet.cz>
    Updated Polish      by Piotr Drąg <piotrdrag@gmail.com>
    Updated Hungarian   by Balázs Meskó <meskobalazs@gmail.com>
    Updated Spanish     by Daniel Mustieles <daniel.mustieles@gmail.com>
    Added Indonesian    by Andika Triwidada <atriwidada@gnome.org>


===============
Version 0.10.0
===============

* New and updated translations:
    Added zh_CN         by Yating Kuang <yatingkuang@ubuntukylin.com>
    Updated Swedish     by Anders Jonsson <anders.jonsson@norsjovallen.se>
    Updated German      by Mario Blättermann <mario.blaettermann@gmail.com>
    Updated Brazilian Portuguese by Enrico Nicoletto <liverig@gmail.com>
    Updated Czech       by Marek Černocký <marek@manet.cz>
    Updated Serbian     by Марко М. Костић <marko.m.kostic@gmail.com>
    Updated Hungarian   by Balázs Meskó <meskobalazs@gmail.com>
    Updated Polish      by Piotr Drąg <piotrdrag@gmail.com>


===============
Version 0.9.92
===============

* New contructor methods for TDocument using custome ReadTypeFunc
* Bug fixes
* New and updated translations:
    Updated Polish      by Piotr Drąg <piotrdrag@gmail.com>
    Updated Serbian     by Мирослав Николић <miroslavnikolic@rocketmail.com>

==========================
Version 0.9.90 and 0.9.91
==========================

* New TDocument.from_stream(), .from_string and .from_uri() methods
* API change TwNode and derived classes renamed to TNode
* Added parse capabilities to TDocument
* Improved performance tests, pointing: GDocument has better memory usage and
  better performance than xDocument; TDocument has better performance but more
  memory usage than GDocument.
* Bug fixes
* New and updated translations:
    Added Hungarian              by Matej Urbančič <mateju@svn.gnome.org>
    Added Slovenian              by Matej Urbančič <mateju@svn.gnome.org>